# GTools

./: .gitignore  CMakeLists.txt
include/GTools/: CmdArgsParser.h  Common.h
src/: CmdArgsParser.cpp
